--- a/othercssfiles/learnmore.css
+++ b/othercssfiles/learnmore.css
@@ -114,7 +114,7 @@ body{
 .expp{
     width: 80%;
     height: ;
-    background-color: red;
+    /* background-color: red; */
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -137,7 +137,8 @@ body{
 .wpd{
     width: auto;
     height:200px;
-    background-color: white;
+    /* background-color: white; */
+    display: ;
 
 
 }
